# legged_control

./: .gitignore  LICENSE  README.md
legged_common/: CMakeLists.txt  package.xml
legged_common/include/legged_common/hardware_interface/: ContactSensorInterface.h  HybridJointInterface.h
legged_common/scripts/: generate_urdf.sh
legged_control/: CMakeLists.txt  package.xml
legged_controllers/: CMakeLists.txt  legged_controllers_plugins.xml  package.xml
legged_controllers/config/: controllers.yaml  joy.yaml
legged_controllers/config/a1/: gait.info  reference.info  task.info
legged_controllers/config/a1_wheeled/: task.info
legged_controllers/config/aliengo/: gait.info  reference.info  task.info
legged_controllers/config/go1/: gait.info  reference.info  task.info
legged_controllers/include/legged_controllers/: LeggedController.h  SafetyChecker.h  TargetTrajectoriesPublisher.h
legged_controllers/include/legged_controllers/visualization/: LeggedSelfCollisionVisualization.h
legged_controllers/launch/: joy_teleop.launch  load_controller.launch
legged_controllers/src/: LeggedController.cpp  TargetTrajectoriesPublisher.cpp
legged_estimation/: CMakeLists.txt  package.xml
legged_estimation/include/legged_estimation/: FromTopiceEstimate.h  LinearKalmanFilter.h  StateEstimateBase.h
legged_estimation/src/: FromTopicEstimate.cpp  LinearKalmanFilter.cpp  StateEstimateBase.cpp
legged_examples/legged_titati_description/: CMakeLists.txt  package.xml
legged_examples/legged_titati_description/launch/: empty_world.launch
legged_examples/legged_titati_description/urdf/: robot.xacro
legged_examples/legged_titati_description/urdf/titati/: const.xacro
legged_examples/legged_unitree/legged_titati_description/docs/四轮足urdf/: titati_visual_dae.urdf
legged_examples/legged_unitree/legged_unitree_description/: CMakeLists.txt  package.xml
legged_examples/legged_unitree/legged_unitree_description/launch/: empty_world.launch
legged_examples/legged_unitree/legged_unitree_description/urdf/: robot.xacro
legged_examples/legged_unitree/legged_unitree_description/urdf/common/: gazebo.xacro  imu.xacro  leg.xacro  materials.xacro  transmission.xacro
legged_examples/legged_unitree/legged_unitree_hw/: CMakeLists.txt  package.xml
legged_examples/legged_unitree/legged_unitree_hw/config/: a1.yaml  aliengo.yaml  go1.yaml
legged_examples/legged_unitree/legged_unitree_hw/include/legged_unitree_hw/: UnitreeHW.h
legged_examples/legged_unitree/legged_unitree_hw/launch/: a1.launch  aliengo.launch  go1.launch  legged_unitree_hw.launch
legged_examples/legged_unitree/legged_unitree_hw/src/: UnitreeHW.cpp  legged_unitree_hw.cpp
legged_gazebo/: CMakeLists.txt  legged_hw_sim_plugins.xml  package.xml
legged_gazebo/config/: default.yaml
legged_gazebo/include/legged_gazebo/: LeggedHWSim.h
legged_gazebo/src/: LeggedHWSim.cpp
legged_gazebo/worlds/: empty_world.world
legged_hw/: CMakeLists.txt  package.xml
legged_hw/include/legged_hw/: LeggedHW.h  LeggedHWLoop.h
legged_hw/src/: LeggedHW.cpp  LeggedHWLoop.cpp
legged_interface/: CMakeLists.txt  package.xml
legged_interface/include/legged_interface/: LeggedInterface.h  LeggedRobotPreComputation.h  SwitchedModelReferenceManager.h
legged_interface/include/legged_interface/constraint/: EndEffectorLinearConstraint.h  FrictionConeConstraint.h  LeggedSelfCollisionConstraint.h  NormalVelocityConstraintCppAd.h  RollingConstraintCppAd.h  SwingTrajectoryPlanner.h  ZeroForceConstraint.h  ZeroVelocityConstraintCppAd.h
legged_interface/include/legged_interface/cost/: LeggedRobotQuadraticTrackingCost.h
legged_interface/include/legged_interface/initialization/: LeggedRobotInitializer.h
legged_interface/src/: LeggedInterface.cpp  LeggedRobotPreComputation.cpp  SwitchedModelReferenceManager.cpp
legged_interface/src/constraint/: EndEffectorLinearConstraint.cpp  FrictionConeConstraint.cpp  NormalVelocityConstraintCppAd.cpp  RollingConstraintCppAd.cpp  SwingTrajectoryPlanner.cpp  ZeroForceConstraint.cpp  ZeroVelocityConstraintCppAd.cpp
legged_interface/src/initialization/: LeggedRobotInitializer.cpp
legged_wbc/: CMakeLists.txt  package.xml
legged_wbc/include/legged_wbc/: HierarchicalWbc.h  HoQp.h  Task.h  WbcBase.h  WeightedWbc.h
legged_wbc/src/: HierarchicalWbc.cpp  HoQp.cpp  WbcBase.cpp  WeightedWbc.cpp
legged_wbc/test/: HoQp_test.cpp
qpoases_catkin/: CMakeLists.txt  package.xml
