<?xml version="1.0"?>
<!-- package.xml是ROS包的清单文件，用于定义包的属性 -->
<package format="2">
    <!-- 包名 -->
    <name>legged_gazebo</name>
    <!-- 版本号 -->
    <version>0.0.0</version>
    <!-- 包的简短描述 -->
    <description>The legged_gazebo packages.</description>
    <!-- 维护者信息 -->
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>
    <!-- 许可证信息 -->
    <license>BSD</license>
    <!-- 作者信息 -->
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <!-- 构建工具依赖 -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- 通用依赖 -->
    <depend>roscpp</depend>
    <depend>legged_common</depend>
    <depend>gazebo_dev</depend>
    <depend>gazebo_ros_control</depend>
    <depend>gazebo_ros</depend>

    <!-- 导出标签，用于向其他ROS包提供信息 -->
    <export>
        <!-- 导出gazebo_ros_control插件，使其可被gazebo_ros_control发现和加载 -->
        <gazebo_ros_control plugin="${prefix}/legged_hw_sim_plugins.xml"/>
        <!-- 导出Gazebo模型路径，这样Gazebo才能找到这个包里的模型和世界文件 -->
        <gazebo_ros gazebo_model_path="${prefix}"/>
    </export>
</package>
